<?xml version="1.0"?>
<package format="3">
  <name>perception_vslam</name>
  <version>0.0.1</version>
  <description>Launch wrapper for RealSense + Isaac ROS Visual SLAM</description>
  <maintainer email="x@example.com">x</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_python</buildtool_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
