<?xml version="1.0"?>
<package format="3">
  <name>vslam_bringup</name>
  <version>0.1.0</version>
  <description>VSLAM + Mapper + QR Bringup</description>

  <maintainer email="shunsuke20070602honjo@gmail.com">Shunski Honjonov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>warehouse_mapper</exec_depend>
  <exec_depend>qr_mapper</exec_depend>
  <exec_depend>perception_vslam</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>isaac_ros_nitros</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
